MLB  spacing issue fixes

--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -17,8 +17,8 @@
       display: flex;
       flex-direction: column;
       // flex: 0.67;
-      width: 1012px;
-      margin: 60px 0 60px 5em;
+      width: 1024px;
+      margin: 60px 0 60px 9em;
 
       h2 {
         font-size: 32px;
@@ -242,7 +242,7 @@
       }
 
       .partner_logo {
-        width: 200px;
+        width: 250px;
         height: 40px;
         display: flex;
         align-self: flex-end;
